# obsidian_ai_miniserver

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  docker-compose.yaml  openapi.json  pyproject.toml  tool_prompt.md
scripts/: publish.py  update_screenshots.py
src/obs_ai_ms/: entry.py  models.py  obsidian_links.py  sync.py  vault.py  webui.py
tests/: test_cli.py  test_integration.py  test_obsidian_links.py  test_sync.py  test_vault.py
