[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-ai-mini-server"
version = "0.1.0"
description = "Make an Obsidian vault accessible to AI agents via REST API and MCP server"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "William Hogben" },
]
dependencies = [
    "fastapi",
    "fastmcp",
    "pydantic",
    "typer",
    "uvicorn[standard]",
]

[project.scripts]
obs_ai_ms = "obs_ai_ms.entry:app"

[tool.hatch.build.targets.wheel]
packages = ["src/obs_ai_ms"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
