[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-ai-miniserver"
version = "0.1.2"
description = "Expose your Obsidian vault via REST API and streamable HTTP MCP server for AI tool access"
readme = "README.md"
authors = [{ name = "William Hogben", email = "will@willhogben.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "fastmcp",
    "pydantic",
    "typer",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "packaging",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/whogben/obsidian_ai_miniserver"
Repository = "https://github.com/whogben/obsidian_ai_miniserver"

[project.scripts]
obs_ai_ms = "obs_ai_ms.entry:app"

[tool.setuptools.packages.find]
where = ["src"]
